--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,23 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.4",
-    "@mui/material": "^6.4.4",
+    "@internationalized/date": "^3.7.0",
+    "@mui/icons-material": "^6.4.5",
+    "@mui/material": "^6.4.5",
+    "@mui/x-date-pickers": "^7.27.0",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@react-aria/button": "^3.11.1",
+    "@react-aria/calendar": "^3.7.0",
+    "@react-aria/datepicker": "^3.13.0",
+    "@react-aria/dialog": "^3.5.21",
+    "@react-aria/i18n": "^3.12.5",
+    "@react-aria/overlays": "^3.25.0",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
+    "react-aria": "^3.37.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
