--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ vectorstore/
 AIEngine/attendance/data/faces_data.pkl
 frontend/src/assets/Attendance.json
 frontend/src/assets/Syllabus.json
+frontend/src/assets/Exams.json
