--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ AIEngine/attendance/data/faces_data.pkl
 frontend/src/assets/Attendance.json
 frontend/src/assets/Syllabus.json
 frontend/src/assets/Exams.json
+
+requirements.txt
