--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-aria": "^3.37.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.3",
     "recharts": "^2.15.1"
   },
   "devDependencies": {
