--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ durationpy==0.9
 fastapi==0.115.8
 filelock==3.17.0
 Flask==3.1.0
+Flask-Cors==5.0.0
 flatbuffers==25.2.10
 frozenlist==1.5.0
 fsspec==2025.2.0
